config/webapp/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-05c9320c93aae0e5e,subnet-07264bfd00cbba3b3,subnet-0816f59d098347d18
    alb.ingress.kubernetes.io/tags: Project=k8s-eks-scaling-demo

spec:
  rules:
    - host: k8s-eks-scaling-demo-echo.modus.app
      http:
        paths:
          - path: /
            backend:
              serviceName: echoserver
              servicePort: 80
